# CorvOS

./: .gitignore  Dockerfile  README.md  README_arkheos.md  arkhe.c  arkhe_daemon.c  asset_pricing_results.json  configuration.nix  devices.c  docker-compose.yml  ethical_oracle  generate_iso_baremetal.sh  install.ps1  install.sh  interrupts.c  merkabah_transcendence_report.md  portfolio_results.json  qaoa_results.json  requirements.txt  syscalls.c  test_swarm_convergence.sh  unified-topology.yaml  wsl_integration.sh
arkhe-sync/arkhe-daemon/: Cargo.toml
arkhe-sync/arkhe-daemon/abi/: CoherenceToken.json  SkillReward.json
arkhe-sync/arkhe-daemon/src/: context.rs  engine.rs  kv_compactor.rs  main.rs  network.rs  offline.rs  slashing.rs  tct_physical.rs
arkhe-sync/arkhe-daemon/src/asi_gate/: chern_verifier.rs  fusion_router.rs  mod.rs  norm_monitor.rs  norm_tests.rs
arkhe-sync/arkhe-daemon/src/collapse/: mod.rs
arkhe-sync/arkhe-daemon/src/context/: kv_compactor_lite.rs
arkhe-sync/arkhe-daemon/src/distill/: mod.rs
arkhe-sync/arkhe-daemon/src/engine/: rem_modulator.rs
arkhe-sync/arkhe-daemon/src/evolution/: auto_repair.rs  mod.rs
arkhe-sync/arkhe-daemon/src/governance/: client.rs  mod.rs
arkhe-sync/arkhe-daemon/src/marketplace/: client.rs  cross_chain.rs  mod.rs  offline_ledger.rs  types.rs  wallet.rs
arkhe-sync/arkhe-daemon/src/nc/: hyper_navigation.rs
arkhe-sync/arkhe-daemon/src/network/: libp2p_discovery.rs  nostr_discovery.rs
arkhe-sync/arkhe-daemon/src/offline/: conflict_resolution.rs
arkhe-sync/arkhe-daemon/src/oracle/: mod.rs
arkhe-sync/arkhe-daemon/src/orchestration/: liquid.rs
mm/: memory.c
(+327 files in other folders)
