[package]
name = "arkhe-daemon"
version = "1.4.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
bincode = "1.3"
tracing = "0.1"
libp2p = { version = "0.53", features = ["mdns", "gossipsub", "tcp", "noise", "yamux", "tokio"] }
protobuf = "3.3"
nostr-sdk = "0.35"
